retrieveUnpackaged/objects/Resource__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this an active resource?</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>This is the application type related to resource</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County for POWTS</description>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>County_for_POWTS</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External Id</description>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Review_Types__c</fullName>
        <description>Plan Review types</description>
        <label>Permit / Plan Review Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POWTS Individual Site Design</fullName>
                </value>
                <value>
                    <fullName>POWTS Component Manual Design</fullName>
                </value>
                <value>
                    <fullName>POWTS Petition for Variance</fullName>
                </value>
                <value>
                    <fullName>POWTS Experimental System</fullName>
                </value>
                <value>
                    <fullName>POWTS Miscellaneous Review</fullName>
                </value>
                <value>
                    <fullName>POWTS Sanitary Permit</fullName>
                </value>
                <value>
                    <fullName>POWTS State-Owned Privy Registration</fullName>
                </value>
                <value>
                    <fullName>POWTS Consultation</fullName>
                </value>
                <value>
                    <fullName>POWTS Component Manual Review</fullName>
                </value>
                <value>
                    <fullName>POWTS Soil Saturation Determination</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes Community Permit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Remote?</description>
        <label>Remote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Software__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Software</description>
        <label>Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Plan Reviewer Training</description>
        <label>Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the resource.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Resource</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Active__c</columns>
        <columns>County__c</columns>
        <columns>Plan_Review_Types__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>POWTS</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Plan_Review_Types__c</columns>
        <columns>County__c</columns>
        <columns>Remote__c</columns>
        <columns>Software__c</columns>
        <columns>Training__c</columns>
        <columns>User__c</columns>
        <columns>Application_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Plan Review</value>
        </filters>
        <label>POWTS</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <recordTypes>
        <fullName>Manufactured_Homes_Communities</fullName>
        <active>true</active>
        <label>Manufactured Homes Communities</label>
    </recordTypes>
    <recordTypes>
        <fullName>POWTS</fullName>
        <active>true</active>
        <label>POWTS</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>